fix:oss api fix
修复我的oss上传逻辑的callback
